# LLM_course

./: .env.template  .gitignore  README.md  pyproject.toml
M1/L2/: homework.ipynb  pyproject.toml  task.md  topic_to_id_map.json
M1/T2/: homework.ipynb  pyproject.toml  task.md
M1/T3/: pyproject.toml  task.md
M1/Т3/: homework.ipynb
M2/T2/: homework.ipynb  pyproject.toml  task.md
M2/T3/: homework.ipynb  pyproject.toml
M2/T4/: task.md
M2/Т3/: task.md
M2/Т4/: homework.ipynb  pyproject.toml
M4/T1/: pyproject.toml
M4/T1/data/: golden_from_gemini.json  pubmed_supplements_for_golden.csv
M4/T2/: homework.ipynb  pyproject.toml  task.md
M4/T2/data/: golden_supplements.csv
M4/T3/: homework.ipynb  pyproject.toml  task.md
M4/T3/data/: golden_musculoskeletal.csv  pubmed_golden_msl.json
M4/T4/: task.md
M4/T5/: homework_ranking_russian_Korneev.ipynb  pyproject.toml
M4/T6/: homework.ipynb  task.md
M4/Т4/: homework.ipynb  pyproject.toml
M5/T1/: homework.ipynb  task.md
M5/T2/: homework.ipynb  pyproject.toml
M5/T2/artifacts/: number_stats.py  report.md  research_notes.json  run_summary.json  test_number_stats.py
M6/T1/: homework.ipynb  pyproject.toml  task.md
М4/T1/: homework.ipynb  task.md
М4/T1/data/: answers_eval.parquet  gemini_golden_prompt.txt  golden_supplements.parquet  pubmed_supplements_corpus.csv  pubmed_supplements_corpus.parquet
