[project]
name = "LLM_course"
version = "0.0.0"
description = "Working repository for LLM Engineer course"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "corus>=0.10.0",
    "fasttext>=0.9.3",
    "gensim>=4.4.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "navec>=0.10.0",
    "nltk>=3.9.2",
    "numpy>=2.3.3",
    "pandarallel>=1.6.5",
    "pandas>=2.3.3",
    "pymorphy3>=2.0.6",
    "razdel>=0.5.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.44",
    "tdqm>=0.0.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cu121",]
