[project]
name = "LLM_course"
version = "0.0.0"
description = "Working repository for LLM Engineer course"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.4.10",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "pandarallel>=1.6.5",
    "pandas>=2.3.3",
    "protobuf>=6.33.0",
    "pymorphy3>=2.0.6",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "sentencepiece>=0.2.1",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cu121",]
