[project]
name = "LLM_course"
version = "0.0.0"
description = "Working repository for LLM Engineer course"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "jupyterlab>=4.4.10",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "ipywidgets>=8.1.3",
    "transformers>=4.45.2",
    "datasets>=2.21.0",
    "accelerate>=0.34.0",
    "bitsandbytes>=0.43.2",
    "peft>=0.12.0",
    "lm-eval>=0.4.2",
    "einops>=0.8.0",
    "scipy>=1.15.1",
    "matplotlib>=3.10.7",
    "sentence-transformers>=3.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cu121",]
