[project]
name = "LLM_course"
version = "0.0.0"
description = "Working repository for LLM Engineer course"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.47.0",
    "biopython>=1.85",
    "jupyterlab>=4.4.10",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-qdrant>=0.2.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "qdrant-client>=1.15.1",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "torchvision>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cu121",]
