[project]
name = "LLM_course"
version = "0.0.0"
description = "Working repository for LLM Engineer course"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "accelerate>=1.12.0",
    "biopython>=1.86",
    "bitsandbytes>=0.49.2",
    "chonkie>=1.5.6",
    "colpali-engine>=0.3.14",
    "datasketch>=1.9.0",
    "gliner>=0.2.25",
    "jupyterlab>=4.4.10",
    "langchain-community>=0.3.31",
    "langchain-huggingface>=0.3.1",
    "langchain-qdrant>=0.2.1",
    "lxml>=6.0.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "qdrant-client>=1.17.0",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.3",
    "transformers>=5.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cu121",]
