[project]
name = "LLM_course"
version = "0.0.0"
description = "Working repository for LLM Engineer course"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "datasets>=4.8.4",
    "faiss-cpu>=1.13.2",
    "jupyterlab>=4.4.10",
    "nltk>=3.9.4",
    "numpy>=2.3.4",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.4",
    "optimum[onnxruntime]>=2.1.0",
    "pandas>=2.3.3",
    "pymorphy3>=2.0.6",
    "rank-bm25>=0.2.2",
    "razdel>=0.5.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
]

[dependency-groups]
dev = [
    "jupytext>=1.19.1",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cu126",]
